2007-02-18  Marius Vollmer  <mvo@zagadka.de>

	Support for X-Expressions and initial rich catalogue
	configurations based on them.
	
	* src/xexp.h, src/xexp.x: New.
	* Makefile.am: Add them to both hildon-application-manager and
	apt-worker.
	* src/apt-worker-proto.cc (apt_proto_decoder::decode_xexp,
	apt_proto_encoder::encode_xexp): New.
	(APTCMD_GET_CATALOGUES, APTCMD_SET_CATALOGUES): New.
	* src/apt-worker-client.h,
	src/apt-worker-client.cc (apt_worker_get_catalogues,
	apt_worker_set_catalogues): New.
	(apt_worker_temp_set_sources_list): Removed, it was unused.
	* src/apt-worker.cc (cmd_get_catalogues, cmd_set_catalogues): New.

	* src/repo.h, src/repo.cc (get_catalogues, set_catalogues): New.
	(show_repo_dialog): Rewritten with new X-Expression representation
	of catalogues.
	(add_entry): Handle end == NULL.
	
2007-02-15  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 5.0pre4
	
	* src/main.cc (install_package): Added 'ask' parameter and
	suppress confirmation dialog when it is false.  Changed all
	callers so that we don't ask again after showing the multi-package
	confirmation dialog.
	(install_packages_with_package_info): Specify a message for
	INSTALL_TYPE_STANDARD since it might be used in red-pill mode.
	(install_named_packages): When there are no packages to install
	left after filtering, annoy user approrpiately instead of silently
	doing nothing.

	* src/instr.cc (instr_cont3): Use multi-package flow for all
	install types when in red-pill mode (and there is more than one
	package).

2007-02-14  Jose Dapena Paz  <jdapena@igalia.com>

	Misc fixes:

	* instr.cc (open_local_install_instructions): Now it doesn't
	fail when descriptions do not match the deb lines in the
	Single-click install file.

	* instr.cc (open_local_install_instructions): some bugfixes in
	conditions, better handling of cases in temporary files.

	* repo.cc (temporary_set_repos): typo, was using GSList, and
	but it should use GList. Fixed.

	* main.cc (free_sections): style fix.